# evcxr

./: .gitignore  .travis.yml  COMMON.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  TODO.md  cackle.toml  cackle.yml  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: cackle.yml  ci.yml  cron.yml  release.yml
binder/: README.md  apt.txt  postBuild  start
ci/: travis_setup.sh
evcxr/: Cargo.toml  HOW_IT_WORKS.md  README.md  build.rs
evcxr/examples/: example_eval.rs  example_hover.rs  kk.rs  zz.rs
evcxr/src/: bench_util.rs  cargo_metadata.rs  child_process.rs  code_block.rs  command_context.rs  crash_guard.rs  crate_config.rs  errors.rs  eval_context.rs  evcxr_internal_runtime.rs  idents.rs  item.rs  lib.rs  module.rs  runtime.rs  rust_analyzer.rs  statement_splitter.rs  toml_parse.rs  use_trees.rs
evcxr/src/module/: artifacts.rs  cache.rs
evcxr/src/testdata/: sample_metadata.json
evcxr/tests/: integration_tests.rs
evcxr_input/: Cargo.toml
evcxr_input/src/: lib.rs
evcxr_jupyter/: Cargo.toml  README.md
evcxr_jupyter/client/: kernel.js
evcxr_jupyter/samples/: evcxr_jupyter_tour.ipynb
evcxr_jupyter/samples/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  evcxr_jupyter_tour-checkpoint.ipynb
evcxr_jupyter/src/: connection.rs  control_file.rs  core.rs  install.rs  jupyter_message.rs  lib.rs  main.rs
evcxr_jupyter/tests/: integration_tests.rs
evcxr_repl/: Cargo.toml  README.md
evcxr_repl/src/: bginit.rs  highlight.rs  lib.rs  repl.rs  scan.rs
evcxr_repl/tests/: integration_tests.rs
evcxr_runtime/: Cargo.toml  README.md
evcxr_runtime/src/: lib.rs  shortcuts.rs
print_performance_info/: Cargo.toml
print_performance_info/src/: main.rs
runtimes/evcxr_image/: Cargo.toml  README.md
runtimes/evcxr_image/src/: lib.rs
scripts/: pre-release.sh  push.sh  release.sh
