[package]
name = "evcxr"
version = "0.17.0"
license = "MIT OR Apache-2.0"
description = "An Evaluation Context for Rust"
repository = "https://github.com/evcxr/evcxr"
readme = "README.md"
authors = ["The Evcxr Authors"]
edition = "2021"
rust-version = "1.74"

[dependencies]
anyhow = "1.0.33"
tempfile = "3.1.0"
libc = "0.2.80"
json = "0.12.4"
regex = { version = "1.3.1", default-features = false, features = [ "std", "unicode-perl" ] }
once_cell = "1.5.2"
libloading = "0.8.0"
dirs = "5.0.1"
which = "6.0.0"
evcxr_input = "1.0.0"
unicode-segmentation = "1.7.1"
crossbeam-channel = "0.5.5"
toml = { version = "0.8.0", default-features = false, features = [ "parse" ] }

ra_ap_ide = "0.0.204"
ra_ap_ide_db = "0.0.204"
ra_ap_project_model = "0.0.204"
ra_ap_paths = "0.0.204"
ra_ap_vfs = "0.0.204"
ra_ap_vfs-notify = "0.0.204"
ra_ap_hir = "0.0.204"
ra_ap_base_db = "0.0.204"
ra_ap_syntax = "0.0.204"

# ra_ap_ide = { package = "ide", path = "../../rust-analyzer/crates/ide"}
# ra_ap_ide_db = { package = "ide-db", path = "../../rust-analyzer/crates/ide-db"}
# ra_ap_project_model = { package = "project-model", path = "../../rust-analyzer/crates/project-model"}
# ra_ap_paths = { package = "paths", path = "../../rust-analyzer/crates/paths"}
# ra_ap_vfs = { package = "vfs", path = "../../rust-analyzer/crates/vfs"}
# ra_ap_vfs-notify = { package = "vfs-notify", path = "../../rust-analyzer/crates/vfs-notify"}
# ra_ap_hir = { package = "hir", path = "../../rust-analyzer/crates/hir"}
# ra_ap_base_db = { package = "base-db", path = "../../rust-analyzer/crates/base-db"}
# ra_ap_syntax = { package = "syntax", path = "../../rust-analyzer/crates/syntax"}

ariadne = "0.4.0"
triomphe = "0.1.8"

pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }

[target.'cfg(all(unix, not(target_os = "freebsd")))'.dependencies]
backtrace = "0.3.35"
sig = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
filetime = "0.2.13"

[build-dependencies]
which = "6.0.0"
