[package]
name = "evcxr_jupyter"
version = "0.21.1"
license = "MIT OR Apache-2.0"
description = "A Jupyter Kernel for Rust"
repository = "https://github.com/evcxr/evcxr"
readme = "README.md"
authors = ["The Evcxr Authors"]
edition = "2024"

[dependencies]
evcxr = { version = "=0.21.1", path = "../evcxr" }
json = "0.12.4"
anyhow = "1.0.33"
bytes = "1.11.1"
tokio = "1.43.1"
uuid = { version = "1.23.2", features = [ "v4" ] }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.2"
dirs = "6.0.0"
chrono = { version = "0.4.19", default-features = false, features = [ "clock" ] }
unicode-segmentation = "1.13.3"
mimalloc = { version = "0.1", default-features = false, optional = true }
crossbeam-channel = "0.5.15"
ariadne = "0.6.0"
zeromq = { version = "0.6.0", default-features = false, features = [ "tokio-runtime", "tcp-transport" ] }
tokio-util = "0.7.8"
yansi = "1.0.1"

[features]
default = ["mimalloc"]
