[package]
name = "evcxr_repl"
version = "0.21.1"
license = "MIT OR Apache-2.0"
description = "A REPL for Rust"
repository = "https://github.com/evcxr/evcxr"
readme = "README.md"
authors = ["The Evcxr Authors"]
edition = "2024"

[features]
default = ["mimalloc"]

[dependencies]
evcxr = { version = "=0.21.1", path = "../evcxr" }
rustyline = "16.0.0"
once_cell = "1.5.2"
regex = { version = "1.4.1", default-features = false, features = [ "std" ] }
clap = { version = "4.3.0", features = [ "derive" ] }
unicode-xid = "0.2"
unicode-segmentation = "1.7.1"
mimalloc = { version = "0.1", default-features = false, optional = true }
parking_lot = "0.12.1"
crossbeam-channel = "0.5.15"
yansi = "1.0.1"
ariadne = "0.5.1"
anyhow = "1.0.33"
ctrlc = "3.2.3"
