[package]
name = "evcxr_runtime"
version = "1.1.0"
license = "Apache-2.0"
description = "Runtime core for the evcxr crate"
repository = "https://github.com/google/evcxr"
readme = "README.md"
authors = ["The Evcxr Authors"]

[dependencies]
base64 = { version = "0.13.0", optional = true }

[features]
bytes = ["base64"]
