[package]
name = "evcxr_image"
version = "1.0.0"
license = "Apache-2.0"
description = "Displays images from the image crate in Evcxr Jupyter"
repository = "https://github.com/google/evcxr"
readme = "README.md"
authors = ["David Lattimore <dml@google.com>"]

[dependencies]
image = "0.21.0"
evcxr_runtime = {version = "1.1.0", path = "../../evcxr_runtime", features = [ "bytes" ]}
