[package]
name = "evcxr_image"
version = "1.1.0"
license = "Apache-2.0"
description = "Displays images from the image crate in Evcxr Jupyter"
repository = "https://github.com/google/evcxr"
readme = "README.md"
authors = ["The Evcxr Authors"]
edition = "2021"

[dependencies]
image = {version = "0.23.12", default-features = false, features = [ "png" ]}
evcxr_runtime = {version = "1.1.0", path = "../../evcxr_runtime", features = [ "bytes" ]}
