[package]
name = "evcxr_image"
version = "1.1.0"
license = "MIT OR Apache-2.0"
description = "Displays images from the image crate in Evcxr Jupyter"
repository = "https://github.com/evcxr/evcxr"
readme = "README.md"
authors = ["The Evcxr Authors"]
edition = "2024"

[dependencies]
image = {version = "0.24.6", default-features = false, features = [ "png" ]}
evcxr_runtime = {version = "1.1.0", path = "../../evcxr_runtime", features = [ "bytes" ]}
